--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# arquivos e pastas ignorados pelo Git
 
-# dependencies
+# dependências do projeto
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
+# testes
 /coverage
 
-# production
+# build de produção
 /build
 
-# misc
+# arquivos diversos
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs de erro
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
